feat(*): add Redis JSON tasks to handle JSON data type + Property.ofValue