@@ -1,18 +1,13 @@
-package io.kestra.plugin.redis;
+package io.kestra.plugin.redis.json;
 
 import io.kestra.core.models.property.Property;
 import io.kestra.core.runners.RunContext;
 import io.kestra.core.runners.RunContextFactory;
-import io.kestra.plugin.redis.string.Delete;
-import io.kestra.plugin.redis.string.Set;
 import io.kestra.core.junit.annotations.KestraTest;
 import jakarta.inject.Inject;
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.TestInstance;
+import org.junit.jupiter.api.*;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -26,48 +21,54 @@ class DeleteTest {
 
     private static final String REDIS_URI = "redis://:redis@localhost:6379/0";
 
-    @Test
-    void testDeleteList() throws Exception {
+    @BeforeAll
+    void setUp() throws Exception {
         RunContext runContext = runContextFactory.of(Map.of());
 
-        Delete task = Delete.builder()
-            .url(Property.ofValue(REDIS_URI))
-            .keys(Property.ofValue(Arrays.asList("keyDelete1", "keyDelete2")))
-            .build();
-
-        Delete.Output runOutput = task.run(runContext);
-
-        assertThat(runOutput.getCount(), is(2));
+        createSetTask("keyDelete1", Map.of("field", "value1")).run(runContext);
+        createSetTask("keyDelete2", Map.of("field", "value2")).run(runContext);
+        createSetTask("keyDeleted", Map.of("field", "value3")).run(runContext);
     }
 
     @Test
-    void testDeleteListFailed() {
+    void testDeleteKeysAndPaths() throws Exception {
         RunContext runContext = runContextFactory.of(Map.of());
 
         Delete task = Delete.builder()
             .url(Property.ofValue(REDIS_URI))
-            .keys(Property.ofValue(Arrays.asList("keyDeleted", "keyDeleted2")))
+            .keys(Property.ofValue(Map.of(
+                "keyDelete1", List.of("$"),
+                "keyDelete2", List.of("$.field")
+            )))
+            .build();
+
+        Delete.Output output = task.run(runContext);
+
+        assertThat(output.getCount(), is(2));
+    }
+
+    @Test
+    void testDeleteWithMissingKeyAndFail() {
+        RunContext runContext = runContextFactory.of(Map.of());
+
+        Delete task = Delete.builder()
+            .url(Property.ofValue(REDIS_URI))
+            .keys(Property.ofValue(Map.of(
+                "keyDeleted", List.of("$.field"),
+                "nonExistingKey", List.of("$")
+            )))
             .failedOnMissing(Property.ofValue(true))
             .build();
 
         Exception e = Assertions.assertThrows(NullPointerException.class, () -> task.run(runContext));
-        assertThat(e.getMessage(), is("Missing keys, only 1 key deleted"));
+        assertThat(e.getMessage(), is("Missing keys or path, only 1 deleted out of 2"));
     }
 
-    @BeforeAll
-    void setUp() throws Exception {
-        RunContext runContext = runContextFactory.of(Map.of());
-        createSetTask("keyDeleteOne", "value1").run(runContext);
-        createSetTask("keyDelete1", "value2").run(runContext);
-        createSetTask("keyDelete2", "value3").run(runContext);
-        createSetTask("keyDeleted", "value4").run(runContext);
-    }
-
-    static Set createSetTask(String key, String value) {
+    static Set createSetTask(String key, Object value) {
         return Set.builder()
             .url(Property.ofValue(REDIS_URI))
             .key(Property.ofValue(key))
-            .value(Property.ofValue(value))
+            .value(Property.of(value))
             .build();
     }
 }
